<resources>
    <string name="app_name">IntegrApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_changePass">Change pass</string>
    <string name="action_modifyAdvertState">Modify State</string>
    <string name="action_lookfor">Look for ads</string>
    <string name="action_offer">Offer ads</string>
    <string name="action_all">All ads</string>
    <string name="action_reportAdvert">Report advert</string>
    <string name="action_reportUser">Report user</string>
    <string name="action_deleteImageUser">Delete user image</string>
    <string name="action_reportForum">Report forum</string>
    <string name="action_deleteImageAdvert">Delete image advert</string>
    <string name="splash_title">IntegrApp</string>
    <string name="splash_slogan">Welcome to your new home!</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="checkbox_text">Remember me</string>
    <string name="button_login_text">Log in</string>
    <string name="signUp_text">DON\'T HAVE AN ACCOUNT? SIGN UP</string>
    <string name="success_login">Log in successful</string>
    <string name="login_error">Username or password are incorrect</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="places">Places</string>
    <string name="type_advert">Type Advert</string>
    <string name="state">State</string>
    <string name="image_desc">Image of advert</string>
    <string name="no_location">No location</string>
    <string name="signUp_title">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="type">Type</string>
    <string name="cif">CIF</string>
    <string name="button_create">Register</string>
    <string name="signUp_success">User created successfully</string>
    <string name="error_signup">User already exists or wrong email provided</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="adds_profile">Ads</string>
    <string name="likes_profile">Likes</string>
    <string name="dislikes_profile">Dislikes</string>
    <string name="typeUser_profile">userType</string>
    <string name="email_profile">email</string>
    <string name="phone_profile">phone</string>
    <string name="name_profile">full name</string>
    <string name="username_profile">username</string>
    <string name="saveProfile_button">Save</string>
    <string name="dialog_save">Are you sure you want to save the changes?</string>
    <string name="tittle_dialogSave">Changes will be saved</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_delete_user">Are you sure you want to delete the user?</string>
    <string name="tittle_dialogDeleteUser">User will be deleted</string>
    <string name="tittle_dialogDeleteImageUser">Image User will be deleted</string>
    <string name="tittle_dialogDeleteImageAdvert">Image Advert will be deleted</string>
    <string name="title_dialogReportUser">Reporting user</string>
    <string name="userReport_ok">User reported correctly</string>
    <string name="error_reportUser">Error reporting user</string>
    <string name="newAdvert_title">Title</string>
    <string name="newAdvert_description">Description</string>
    <string name="newAdvert_places">Places</string>
    <string name="newAdvert_screenTitle">New Advert</string>
    <string name="newAdvert_post">Post</string>
    <string name="newAdvert_success">Advert created successfully</string>
    <string name="newAdvert_error">Error creating advert</string>
    <string name="newAdvert_creating">Creating advert&#8230;</string>
    <string name="newAdvert_expectedDate">Expected Date</string>
    <string name="newAdvert_expectedTime">Expected Time</string>
    <string name="newAdvert_buttonDate">Date</string>
    <string name="newAdvert_buttonTime">Time</string>
    <string name="newAdvert_location">Location</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_adverts">Adverts</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_aboutUs">About us</string>
    <string name="menu_logOut">Log out</string>
    <string name="error_fullName_empty">Full name must be filled</string>
    <string name="error_username_length">Username must contain between 3 and 20 characters</string>
    <string name="error_username_chars">Valid characters: alphanumeric, _ and -</string>
    <string name="error_password_length">Password must contain between 6 and 128 characters</string>
    <string name="error_cif_empty">CIF must contain 9 characters</string>
    <string name="error_username_empty">Username must be filled</string>
    <string name="error_password_empty">Password must be filled</string>
    <string name="error_title_empty">Title must be filled</string>
    <string name="error_description_empty">Description must be filled</string>
    <string name="error_places_empty">Places must be filled</string>
    <string name="error_date_not_selected">Select a date</string>
    <string name="error_time_not_selected">Select time</string>
    <string name="error_changePassField_empty">This field must be filled</string>
    <string name="error_places_lte0">Places must be greater than 0</string>
    <string name="username_advert">Username</string>
    <string name="profileButton_advert">Profile</string>
    <string name="tittle_advert">Ad tittle</string>
    <string name="description_advert">Description of the advert</string>
    <string name="places_advert">Places</string>
    <string name="location_advert">Location:</string>
    <string name="available_places">Available places:</string>
    <string name="expectedDate_advert">Expected date</string>
    <string name="wantItButton_advert">I WANT IT!</string>
    <string name="acceptedButton_advert">ACCEPTED</string>
    <string name="pendingButton_advert">PENDING</string>
    <string name="completedButton_advert">COMPLETED</string>
    <string name="refusedButton_advert">REFUSED</string>
    <string name="manageInscriptions">MANAGE INSCRIPTIONS</string>
    <string name="inscription_error">Error making inscription</string>
    <string name="wantItButton_advertOther">I want it !</string>
    <string name="wantItButton_advertOwner">View Inscriptions</string>
    <string name="dialog_delete_advert">Are you sure you want to delete the advert?</string>
    <string name="dialog_modify_state_advert">Are you sure you want to change the state of the advert?</string>
    <string name="tittle_dialogDeleteAdvert">Advert will be deleted</string>
    <string name="tittle_dialogModifyStateAdvert">Advert State will be changed</string>
    <string name="wantItButton_editadvert">Save Changes</string>
    <string name="dialog_delete_inscription">Are you sure you want to cancel your request?</string>
    <string name="dialog_delete_image_user">Are you sure you want to delete your user image?</string>
    <string name="dialog_delete_image_advert">Are you sure you want to delete your advert image?</string>
    <string name="tittle_dialogDeleteInscription">Your inscription will be deleted</string>
    <string name="error_noPlaces">You can not enroll to this advert</string>
    <string name="dialog_report">Enter the reason of the report</string>
    <string name="title_dialogReportAdvert">Reporting advert</string>
    <string name="advertReport_ok">Advert reported correctly</string>
    <string name="error_reportAdvert">Error reporting advert</string>
    <string name="changePass_tittle">Change password</string>
    <string name="current_pass">Current password</string>
    <string name="new_pass">New password</string>
    <string name="confirm_pass">Confirm new password</string>
    <string name="changePass_button">Change</string>
    <string name="acceptInscription">Accept inscription</string>
    <string name="refuseInscription">Refuse inscription</string>
    <string name="menu_inscriptions">Inscriptions</string>
    <string name="dialog_refuse">Refuse</string>
    <string name="dialog_manage_inscription">Do you want to accept or refuse the inscription?</string>
    <string name="commentButton_forum">Comment</string>
    <string name="postCommentButton_forum">Post</string>
    <string name="dialog_delete_comment">Are you sure you want to delete the comment?</string>
    <string name="tittle_dialogDeleteComment">Comment will be deleted</string>
    <string name="error_GettingUserInfo">Error getting user info</string>
    <string name="error_GettingAdvertInfo">Error getting advert info</string>
    <string name="error_DeletingInscription">Error deleting inscription</string>
    <string name="error_GettingInscriptions">Error getting inscriptions</string>
    <string name="error_LoadingAds">Error loading ads</string>
    <string name="toast_LookForAds">Look for ads</string>
    <string name="toast_OfferAds">Offer ads</string>
    <string name="toast_AllAds">All ads</string>
    <string name="toast_ManageInscriptions">Manage inscriptions</string>
    <string name="toast_AdvertDeletedSuccessfully">Advert deleted successfully</string>
    <string name="error_DeletingAdvert">Error deleting advert</string>
    <string name="error_EmptyValuesAdded">Error empty values added</string>
    <string name="error_PlacesMustBeGreaterThatZero">Error places must be greater than 0</string>
    <string name="toast_ChangesSaveCorrectly">Changes saved successfully</string>
    <string name="error_SavingChangesAdvert">Error saving changes, check date</string>
    <string name="toast_AdvertStateChangedSuccessfully">Advert State changed successfully</string>
    <string name="error_ChangingAdvertState">Error changing advert state</string>
    <string name="toast_ChatCorrectly">Go to users tab to open a new chat!</string>
    <string name="error_SettingInfoChats">Error setting info of chats</string>
    <string name="who_we_are">Who we are</string>
    <string name="who_we_are_text">We are a group of seven students of Informatics Engineering from the Faculty of Informatics of Barcelona (FIB), who carry out a project focused on helping the integration of people who arrive in an unknown country can be much easier.</string>
    <string name="our_mission">Our mission</string>
    <string name="our_mission_text">IntegrApp has the mission to help the immigrant community to interact with other people in the same situation or with people who live in the city that, for whatever reason, they have arrived at a given time.</string>
    <string name="our_essence">Our essence</string>
    <string name="our_essence_text">In our core, IntegrApp operates through imagination, teamwork, communication and, above all, motivation to help the immigrant community.</string>
    <string name="our_promise">Our promise</string>
    <string name="our_promise_text">We offer a bulletin board, a user forum, a chat so that users can interact directly, among other things.</string>
    <string name="team">Team</string>
    <string name="arnau_orriols">Arnau Orriols</string>
    <string name="roger_lopez">Roger López</string>
    <string name="laura_brull">Laura Brull</string>
    <string name="alex_huang">Alex Huang</string>
    <string name="manel_alex">Manel-Àlex</string>
    <string name="sergi_aguilar">Sergi Aguilar</string>
    <string name="daniel_perez">Daniel Pérez</string>
</resources>