<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_perm_identity_black_48dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_adverts"
            android:icon="@drawable/ic_description_black_48dp"
            android:title="@string/menu_adverts" />
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_forum_black_48dp"
            android:title="@string/menu_forum" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat_black_48dp"
            android:title="@string/menu_chats" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_info_black_48dp"
            android:title="@string/menu_aboutUs" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_close_black_48dp"
            android:title="@string/menu_logOut" />
    </group>

</menu>
