<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_modifyAdvertState"
        android:orderInCategory="100"
        android:title="@string/action_modifyAdvertState"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reportAdvert"
        android:orderInCategory="100"
        android:title="@string/action_reportAdvert"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deleteImageAdvert"
        android:orderInCategory="100"
        android:title="@string/action_deleteImageAdvert"
        app:showAsAction="never" />
</menu>