<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_we_are"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_we_are_text"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_mission"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_text"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_essence"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_essence_text"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_promise"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_promise_text"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="15sp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/arnau_profile"
                            app:civ_border_color="@color/colorPrimaryAux"
                            app:civ_border_width="3dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/arnau_orriols"
                            android:textStyle="bold"
                            android:textSize="20sp"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/roger_profile"
                            app:civ_border_color="@color/colorPrimaryAux"
                            app:civ_border_width="3dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/roger_lopez"
                            android:textStyle="bold"
                            android:textSize="20sp"/>

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/laura_profile"
                            app:civ_border_color="@color/colorPrimaryAux"
                            app:civ_border_width="3dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/laura_brull"
                            android:textStyle="bold"
                            android:textSize="20sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/alex_profile"
                            app:civ_border_color="@color/colorPrimaryAux"
                            app:civ_border_width="3dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/alex_huang"
                            android:textStyle="bold"
                            android:textSize="20sp"/>

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/manel_profile"
                            app:civ_border_color="@color/colorPrimaryAux"
                            app:civ_border_width="3dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/manel_alex"
                            android:textStyle="bold"
                            android:textSize="20sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/sergi_profile"
                            app:civ_border_color="@color/colorPrimaryAux"
                            app:civ_border_width="3dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/sergi_aguilar"
                            android:textStyle="bold"
                            android:textSize="20sp"/>

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/dani_profile"
                            app:civ_border_color="@color/colorPrimaryAux"
                            app:civ_border_width="3dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/daniel_perez"
                            android:textStyle="bold"
                            android:textSize="20sp"/>

                    </LinearLayout>
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>